--- a/login.css
+++ b/login.css
@@ -97,3 +97,20 @@ footer nav ul {
     margin: 2em;
     list-style-type: none;
 }
+#login input[type="email"], #login input[type="password"] {
+    height: 40px;
+    margin-bottom: 20px;
+    padding: 0 10px;
+    font-size: 1em;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+}
+form p {
+    text-align: center;
+    font-size: 30px;
+    font-family: 'Syne';
+    color: red;
+    margin: 5px;
+
+}
