--- a/login.css
+++ b/login.css
@@ -106,9 +106,9 @@ footer nav ul {
     border-radius: 4px;
     box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
-form p {
+#error-message {
     text-align: center;
-    font-size: 30px;
+    font-size: 14px;
     font-family: 'Syne';
     color: red;
     margin: 5px;
