--- a/modal.css
+++ b/modal.css
@@ -1,3 +1,4 @@
+/* <!-- modal-content --> */
 .modal-content {
   display: none;
   justify-content: center;
@@ -23,21 +24,6 @@
   color: #000000;
   margin: 10px;
 }
-/* .gallery-list {
-	width: 100%;
-	display: grid;
-    min-height: min-content;
-	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows:1fr 1fr 1fr 1fr 1fr ;
-	grid-column-gap: 10px;
-	grid-row-gap: 10px;
-} */
-/* .gallery-list img {
-	display: block;
-	margin: auto;
-	width: 100%;
-    
-} */
 .modal {
   display:flex;
   justify-content: space-between;
@@ -100,7 +86,7 @@ span .fa-trash-can {
   color: white;
   font-size: 0.7rem;
 }
-/* 2em modal */
+/* <!-- modal-add-img --> */
 .modalAddImg {
   display:none;
   justify-content: space-between;
@@ -131,16 +117,12 @@ form {
   flex-direction: column;
   align-items: center;
   border-radius: 5px;
-  /* height: 80%; */
-  /* justify-content: center; */
-  
 }
 .form-add-work{
  display: flex;
  flex-direction: column;
  padding: 0px 40px 0px 40px ; 
 }
-
 .file-input label {
   background-color: rgb(196, 201, 207);
   color: rgb(104, 126, 152);
@@ -182,14 +164,12 @@ margin: 5px;
   border-radius: 25px;
   border: none;
   cursor: pointer;
-
 }
-    
+ 
 .labelcategory {
   color: rgb(0, 0, 0);
   padding: 20px 10px 20px 0px;
 }
-
 .form-add-work select {
   height: 30px;
   font-size: 1.2em;
